<resources>
    <string name="app_name">Animations-part1</string>
    <string name="first_constraint_set_example">constraint set one</string>
    <string name="second_constraint_set_example">constraint set two</string>
    <string name="place_holder_example">place holder</string>
    <string name="mars_image">mars</string>
    <string name="mars_text_view">Mars</string>
    <string name="mars_text_description">Mars is the fourth planet from the Sun and the second-smallest planet in the
        Solar System after Mercury. In English, Mars carries a name of the Roman god of war, and is often referred to as
        the \"Red Planet\"[15][16] because the reddish iron oxide prevalent on its surface gives it a reddish appearance
        that is distinctive among the astronomical bodies visible to the naked eye.[17] Mars is a terrestrial planet
        with a thin atmosphere, having surface features reminiscent both of the impact craters of the Moon and the
        valleys, deserts, and polar ice caps of Earth. The rotational period and seasonal cycles of Mars are likewise
        similar to those of Earth, as is the tilt that produces the seasons. Mars is the site of Olympus Mons, the
        largest volcano and second-highest known mountain in the Solar System, and of Valles Marineris, one of the
        largest canyons in the Solar System. The smooth Borealis basin in the northern hemisphere covers 40% of the
        planet and may be a giant impact feature.[18][19] Mars has two moons, Phobos and Deimos, which are small and
        irregularly shaped. These may be captured asteroids,[20][21] similar to 5261 Eureka, a Mars trojan.
    </string>
    <string name="title_text_string">Sillicon Valley</string>
    <string name="sillicon_text_desc_string">high-tech</string>
    <string name="desc_string">Silicon Valley, in the southern San Francisco Bay Area of California, is home to many
        start-up and global technology companies. Apple, Facebook and Google are among the most prominent.
    </string>
    <string name="place_holder_text_string">What is your android version?</string>
    <string name="android_version_n">N</string>
    <string name="android_version_p">P</string>
    <string name="android_version_q">Q</string>
    <string name="android_version_o">O</string>
    <string name="circle_positioning">Circle Positioning</string>
    <string name="cross_tick_string">cross tick description</string>
    <string name="clock_string_description">clock description</string>
    <string name="moon_description">circle around</string>
    <string name="earth_description">earth in center</string>
</resources>
