<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/first_constraint_set_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_button" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/second_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="constraintSetFirstExample"/>
    <Button
            android:text="@string/second_constraint_set_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_button"
            app:layout_constraintTop_toBottomOf="@+id/first_button"
            app:layout_constraintBottom_toTopOf="@+id/third_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="constraintSetSecondExample"/>
    <Button
            android:text="@string/place_holder_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/third_button"
            app:layout_constraintTop_toBottomOf="@+id/second_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="placeHolderExample"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/circulePositioning"/>
    <Button
            android:text="@string/circle_positioning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/circulePositioning" android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="circlePositioning"/>
</androidx.constraintlayout.widget.ConstraintLayout>